[package]
name = "polkadot-statement-table"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
parity-scale-codec = { version = "3.6.1", default-features = false, features = ["derive"] }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "revert-libp2p-0.52" }
primitives = { package = "polkadot-primitives", path = "../primitives" }
