[package]
name = "polkadot-node-subsystem-test-helpers"
description = "Subsystem traits and message definitions"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1.57"
futures = "0.3.21"
parking_lot = "0.12.0"
polkadot-node-subsystem = { path = "../subsystem" }
polkadot-node-subsystem-util = { path = "../subsystem-util" }
polkadot-primitives = { path = "../../primitives" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "revert-libp2p-0.52" }
sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "revert-libp2p-0.52" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "revert-libp2p-0.52" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "revert-libp2p-0.52" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "revert-libp2p-0.52" }

[dev-dependencies]
polkadot-overseer = { path = "../overseer" }
