[package]
name = "polkadot-node-subsystem-types"
description = "Subsystem traits and message definitions"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
derive_more = "0.99.17"
futures = "0.3.21"
polkadot-primitives = { path = "../../primitives" }
polkadot-node-primitives = { path = "../primitives" }
polkadot-node-network-protocol = { path = "../network/protocol" }
polkadot-statement-table = { path = "../../statement-table" }
polkadot-node-jaeger = { path = "../jaeger" }
orchestra = "0.0.5"
sc-network = { git = "https://github.com/paritytech/substrate", branch = "revert-libp2p-0.52" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "revert-libp2p-0.52" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "revert-libp2p-0.52" }
sp-authority-discovery = { git = "https://github.com/paritytech/substrate", branch = "revert-libp2p-0.52" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "revert-libp2p-0.52" }
smallvec = "1.8.0"
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate", branch = "revert-libp2p-0.52" }
thiserror = "1.0.31"
async-trait = "0.1.57"
bitvec = { version = "1.0.0", default-features = false, features = ["alloc"] }
