[package]
name = "polkadot-primitives-test-helpers"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "revert-libp2p-0.52" }
sp-application-crypto = { package = "sp-application-crypto", git = "https://github.com/paritytech/substrate", default-features = false , branch = "revert-libp2p-0.52" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "revert-libp2p-0.52" }
sp-core = { git = "https://github.com/paritytech/substrate", features = ["std"] , branch = "revert-libp2p-0.52" }
polkadot-primitives = { path = "../" }
rand = "0.8.5"
