[package]
name = "polkadot-node-core-pvf-checker"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
futures = "0.3.21"
thiserror = "1.0.31"
gum = { package = "tracing-gum", path = "../../gum" }

polkadot-node-primitives = { path = "../../primitives" }
polkadot-node-subsystem = { path = "../../subsystem" }
polkadot-primitives = { path = "../../../primitives" }
polkadot-node-subsystem-util = { path = "../../subsystem-util" }
polkadot-overseer = { path = "../../overseer" }

sp-keystore = { git = "https://github.com/paritytech/substrate", branch = "revert-libp2p-0.52" }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", branch = "revert-libp2p-0.52" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "revert-libp2p-0.52" }
sc-keystore = { git = "https://github.com/paritytech/substrate", branch = "revert-libp2p-0.52" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "revert-libp2p-0.52" }
polkadot-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers"}
test-helpers = { package = "polkadot-primitives-test-helpers", path = "../../../primitives/test-helpers" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate", branch = "revert-libp2p-0.52" }
futures-timer = "3.0.2"
