[package]
name = "polkadot-node-core-runtime-api"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
futures = "0.3.21"
gum = { package = "tracing-gum", path = "../../gum" }
lru = "0.9"

sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "revert-libp2p-0.52" }

polkadot-primitives = { path = "../../../primitives" }
polkadot-node-metrics = { path = "../../metrics" }
polkadot-node-subsystem = { path = "../../subsystem" }
polkadot-node-subsystem-types = { path = "../../subsystem-types" }

[dev-dependencies]
sp-api = { git = "https://github.com/paritytech/substrate", branch = "revert-libp2p-0.52" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "revert-libp2p-0.52" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "revert-libp2p-0.52" }
async-trait = "0.1.57"
futures = { version = "0.3.21", features = ["thread-pool"] }
polkadot-node-subsystem-test-helpers = { path = "../../subsystem-test-helpers" }
polkadot-node-primitives = { path = "../../primitives" }
test-helpers = { package = "polkadot-primitives-test-helpers", path = "../../../primitives/test-helpers" }
