[package]
name = "polkadot-test-client"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
parity-scale-codec = { version = "3.6.1", default-features = false, features = ["derive"] }

# Polkadot dependencies
polkadot-test-runtime = { path = "../../../runtime/test-runtime" }
polkadot-test-service = { path = "../service" }
polkadot-primitives = { path = "../../../primitives" }
polkadot-node-subsystem = { path = "../../subsystem" }

# Substrate dependencies
substrate-test-client = { git = "https://github.com/paritytech/substrate", branch = "revert-libp2p-0.52" }
sc-service = { git = "https://github.com/paritytech/substrate", branch = "revert-libp2p-0.52" }
sc-block-builder = { git = "https://github.com/paritytech/substrate", branch = "revert-libp2p-0.52" }
sc-consensus = { git = "https://github.com/paritytech/substrate", branch = "revert-libp2p-0.52" }
sc-offchain = { git = "https://github.com/paritytech/substrate", branch = "revert-libp2p-0.52" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "revert-libp2p-0.52" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "revert-libp2p-0.52" }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = "revert-libp2p-0.52" }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "revert-libp2p-0.52" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "revert-libp2p-0.52" }
sp-timestamp = { git = "https://github.com/paritytech/substrate", branch = "revert-libp2p-0.52" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "revert-libp2p-0.52" }
sp-consensus-babe = { git = "https://github.com/paritytech/substrate", branch = "revert-libp2p-0.52" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "revert-libp2p-0.52" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "revert-libp2p-0.52" }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "revert-libp2p-0.52" }

[dev-dependencies]
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "revert-libp2p-0.52" }
futures = "0.3.21"

[features]
runtime-benchmarks=["polkadot-test-runtime/runtime-benchmarks"]
