[package]
name = "xcm-executor-integration-tests"
description = "Integration tests for the XCM Executor"
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "revert-libp2p-0.52" }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "revert-libp2p-0.52" }
futures = "0.3.21"
pallet-xcm = { path = "../../pallet-xcm" }
polkadot-test-client = { path = "../../../node/test/client" }
polkadot-test-runtime = { path = "../../../runtime/test-runtime" }
polkadot-test-service = { path = "../../../node/test/service" }
sp-consensus = { git = "https://github.com/paritytech/substrate", branch = "revert-libp2p-0.52" }
sp-keyring = { git = "https://github.com/paritytech/substrate", branch = "revert-libp2p-0.52" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false , branch = "revert-libp2p-0.52" }
sp-state-machine = { git = "https://github.com/paritytech/substrate", branch = "revert-libp2p-0.52" }
xcm = { path = "../..", default-features = false }
xcm-executor = { path = ".." }
sp-tracing = { git = "https://github.com/paritytech/substrate", branch = "revert-libp2p-0.52" }

[features]
default = ["std"]
std = [
	"xcm/std",
	"sp-runtime/std",
	"frame-support/std",
]
